--- a/Notes/references.bib
+++ b/Notes/references.bib
@@ -66,3 +66,14 @@
   year={2019},
   publisher={Springer}
 }
+
+@article{cuesta1996lower,
+  title={On lower bounds for the L2-Wasserstein metric in a Hilbert space},
+  author={Cuesta-Albertos, JA and Matr{\'a}n-Bea, C and Tuero-Diaz, A},
+  journal={Journal of Theoretical Probability},
+  volume={9},
+  number={2},
+  pages={263--283},
+  year={1996},
+  publisher={Springer}
+}
