--- a/Notes/references.bib
+++ b/Notes/references.bib
@@ -77,3 +77,22 @@
   year={1996},
   publisher={Springer}
 }
+
+@book{larsson2008partial,
+  title={Partial differential equations with numerical methods},
+  author={Larsson, Stig and Thom{\'e}e, Vidar},
+  volume={45},
+  year={2008},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{powers1970free,
+  title={Free states of the canonical anticommutation relations},
+  author={Powers, Robert T and St{\o}rmer, Erling},
+  journal={Communications in Mathematical Physics},
+  volume={16},
+  number={1},
+  pages={1--33},
+  year={1970},
+  publisher={Springer}
+}
