--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -511,7 +511,35 @@ Now since in our case we have un-centered Gaussian measures $\nu_{1},\nu_{2}$ we
 \end{equation*}
 \textit{Note: here} $m_1,m_2$ \textit{are the means of} $\nu_{1},\nu_{2}$ \textit{respectively}. \\
 
-For our particular case, the norm for the difference in means is the norm on $H_{0}^{1}(\Omega)$: $\|m_1-m_2\|^{2}=|m_1-m_2|_{H^1(\Omega)}^{2}=\|\nabla(m_1-m_2)\|_{L^2(\Omega)}^{2}$
+For our particular case, the norm for the difference in means is the norm on $H_{0}^{1}(\Omega)$: $\|m_1-m_2\|^{2}=|m_1-m_2|_{H^1(\Omega)}^{2}=\|\nabla(m_1-m_2)\|_{L^2(\Omega)}^{2}$ If we now denote the covariance operators of $\nu_{1},\nu_{2}$ as $\Sigma_{1},\Sigma_{2}$ respectively we have:
+\begin{equation*}
+    W^{2}(\nu_1,\nu_2)=|m_1-m_2|_{H^{1}(\Omega)}^{2}+W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))
+\end{equation*}
+We now go about obtaining an upperbound on each of these two terms. We want to control each term by the FEM mesh size $h$ (which is inversely proportional to the number of finite elements $J$). For brevity we will assume now that $\Omega\subset\mathbb{R}^{2}$ so we have a 2 dimensional problem. The analysis follows in almost exactly the same way for $\mathbb{R}^{d}$. We will assume that $\Omega$ is a convex polygonal domain (the polygonal assumption can easily be relaxed). The convexity assumption gives us that the $H^2(\Omega)$ norm of the variational solution of our PDE is controlled by the $L^2$ norm of the RHS. We now take our FEM mesh to be a triangulation of $\Omega$ with $h$ being the maximum side length of any triangle in the triangulation. We require a further technical assumption that the meshes we consider remain regular in the sense that as we refine the mesh by decreasing $h$ to zero the angles of all the triangles are bounded below independently of $h$. Since $m_1=\mathcal{L}^{-1}\bar{f}$ is the solution to the following elliptic boundary value problem:
+\begin{align*}
+    \begin{split}
+        -\nabla\cdot(a(x)\nabla v(x))&=\bar{f}(x), \hspace{0.3cm} x\in\Omega \\
+        v&=0, \hspace{0.3cm} x\in\partial\Omega
+    \end{split}
+\end{align*}
+and since $m_2=\Phi^{*}M^{-1}\bar{F}=\Phi^{*}M^{-1}\mathcal{I}\bar{f}$ is the FEM solution to the variational formulation of the above problem the error analysis of FEM transfers over to allow us to bound the norm of the difference of the means as follows:
+\begin{equation}
+    \label{bound_on_diff_means}
+    |m_1-m_2|_{H^{1}(\Omega)}\leq Ch\|\bar{f}\|_{L^2(\Omega)}
+\end{equation}
+for some constant $C_{1}>0$ (!!ask about which value to use for this!!)
+The assumptions and error analysis is taken from Chapter 5 of \cite{larsson2008partial}. \\
+
+We now move on to getting an upperbound for the second term. Using the link with the Procrustes distance discussed above we have:
+\begin{equation*}
+    W^2(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))\leq\|\Sigma_{1}^{1/2}-\Sigma_{2}^{1/2}\|_{2}^{2}
+\end{equation*}
+
+The RHS of the above is still difficult to deal with so we make use of Lemma 4.1 from \cite{powers1970free} to obtain:
+\begin{equation*}
+    W^2(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))\leq\|\Sigma_{1}^{1/2}-\Sigma_{2}^{1/2}\|_{2}^{2}\leq\|\Sigma_1-\Sigma_2\|_{1}
+\end{equation*}
+where $\|\cdot\|_1$ is the trace norm or nuclear norm defined by $\|A\|_{1}=\operatorname{tr}(\sqrt{A^{*}A})$.
 
 
 
