--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -511,9 +511,9 @@ Now since in our case we have un-centered Gaussian measures $\nu_{1},\nu_{2}$ we
 \end{equation*}
 \textit{Note: here} $m_1,m_2$ \textit{are the means of} $\nu_{1},\nu_{2}$ \textit{respectively}. \\
 
-For our particular case, the norm for the difference in means is the norm on $H_{0}^{1}(\Omega)$: $\|m_1-m_2\|^{2}=|m_1-m_2|_{H^1(\Omega)}^{2}=\|\nabla(m_1-m_2)\|_{L^2(\Omega)}^{2}$ If we now denote the covariance operators of $\nu_{1},\nu_{2}$ as $\Sigma_{1},\Sigma_{2}$ respectively we have:
+For our particular case, we will consider the underlying Hilbert space to be $\mathcal{H}=L^{2}(\Omega)$. As such the norm for the difference in means is the $L^{2}$ norm However, note that the solution $u$ to our boundary value problem lies in $H^{1}_{0}(\Omega)$, a subspace of $L^{2}(\Omega)$. Since we are interested in seeking an upper bound on the Wasserstein distance we can focus on the $|\cdot|_{H^{1}_{0}(\Omega)}$ norm\footnote{This is a semi-norm on $H^{1}(\Omega)$.} on $H_{0}^{1}(\Omega)$: $|m_1-m_2|_{H^1(\Omega)}^{2}=\|\nabla(m_1-m_2)\|_{L^2(\Omega)}^{2}$. Since this norm is equivalent to the usual $H^1(\Omega)$ norm on $H_{0}^{1}(\Omega)$, which is an upper bound for the $L^{2}$ norm, we can go about finding an upper bound for the $|\cdot|_{H_{0}^{1}(\Omega)}$ norm. If we now denote the covariance operators of $\nu_{1},\nu_{2}$ as $\Sigma_{1},\Sigma_{2}$ respectively we have:
 \begin{equation*}
-    W^{2}(\nu_1,\nu_2)=|m_1-m_2|_{H^{1}(\Omega)}^{2}+W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))
+    W^{2}(\nu_1,\nu_2)=\|m_1-m_2\|_{L^{2}(\Omega)}^{2}+W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))
 \end{equation*}
 We now go about obtaining an upperbound on each of these two terms. We want to control each term by the FEM mesh size $h$ (which is inversely proportional to the number of finite elements $J$). For brevity we will assume now that $\Omega\subset\mathbb{R}^{2}$ so we have a 2 dimensional problem. The analysis follows in almost exactly the same way for $\mathbb{R}^{d}$. We will assume that $\Omega$ is a convex polygonal domain (the polygonal assumption can easily be relaxed). The convexity assumption gives us that the $H^2(\Omega)$ norm of the variational solution of our PDE is controlled by the $L^2$ norm of the RHS. We now take our FEM mesh to be a triangulation of $\Omega$ with $h$ being the maximum side length of any triangle in the triangulation. We require a further technical assumption that the meshes we consider remain regular in the sense that as we refine the mesh by decreasing $h$ to zero the angles of all the triangles are bounded below independently of $h$. Since $m_1=\mathcal{L}^{-1}\bar{f}$ is the solution to the following elliptic boundary value problem:
 \begin{align*}
@@ -525,9 +525,9 @@ We now go about obtaining an upperbound on each of these two terms. We want to c
 and since $m_2=\Phi^{*}M^{-1}\bar{F}=\Phi^{*}M^{-1}\mathcal{I}\bar{f}$ is the FEM solution to the variational formulation of the above problem the error analysis of FEM transfers over to allow us to bound the norm of the difference of the means as follows:
 \begin{equation}
     \label{bound_on_diff_means}
-    |m_1-m_2|_{H^{1}(\Omega)}\leq Ch\|\bar{f}\|_{L^2(\Omega)}
+    \|m_1-m_2\|_{L^{2}(\Omega)}\leq\|m_1-m_2\|_{H^{1}(\Omega)}\leq C|m_1-m_2|_{H^{1}(\Omega)}\leq \tilde{C}h\|\bar{f}\|_{L^2(\Omega)}
 \end{equation}
-for some constant $C_{1}>0$ (!!ask about which value to use for this!!)
+for some constant $C,\tilde{C}>0$ (!!ask about which value to use for this!!)
 The assumptions and error analysis is taken from Chapter 5 of \cite{larsson2008partial}. \\
 
 We now move on to getting an upperbound for the second term. Using the link with the Procrustes distance discussed above we have:
@@ -558,33 +558,125 @@ where we have used the defintion of $K_{\mathcal{I}}$ and the fact that $M$ and 
 \end{align*}
 where we have utilized Holder's inequality and the sub-multiplicativity of Schatten-p norms (\textit{note: the} $\|\cdot\|_{\infty}$ \textit{is the operator norm here and is a special case of the Schatten-p norm for p being infinity}). As mentioned, we can control how ``close" $\Phi^{*}M^{-1}\mathcal{I}$ is to $\mathcal{L}^{-1}$. To do this we note that (\ref{bound_on_diff_means}) holds for all $\bar{f}$ in $L^{2}(\Omega)$, i.e. we have:
 \begin{equation*}
-    |m_1-m_2|_{H^{1}(\Omega)}=|(\mathcal{L}^{-1}-\Phi^{*}M^{-1}\mathcal{I})\bar{f}|_{H^{1}(\Omega)}\leq Ch\|\bar{f}\|_{L^2(\Omega)} \hspace{0.25cm} \forall\bar{f}\in L^{2}(\Omega)
+    |m_1-m_2|_{H^{1}(\Omega)}=|(\mathcal{L}^{-1}-\Phi^{*}M^{-1}\mathcal{I})\bar{f}|_{H^{1}(\Omega)}\leq C_{1}h\|\bar{f}\|_{L^2(\Omega)} \hspace{0.25cm} \forall\bar{f}\in L^{2}(\Omega)
 \end{equation*}
+where $C_1:=\tilde{C}/C>0$. \\
 
-This implies that we can bound the operator norm of $\mathcal{L}^{-1}-\Phi^{*}M^{-1}\mathcal{I}$ by $Ch$, i.e.,
+This implies that we can bound the operator norm of $\mathcal{L}^{-1}-\Phi^{*}M^{-1}\mathcal{I}$ by $C_{1}h$, i.e.,
 \begin{equation}
     \label{bound_on_diff_of_solution_operators}
-    \|\mathcal{L}^{-1}-\Phi^{*}M^{-1}\mathcal{I}\|_{\infty}\leq Ch
+    \|\mathcal{L}^{-1}-\Phi^{*}M^{-1}\mathcal{I}\|_{\infty}\leq C_{1}h
 \end{equation}
 
 Utilising this upper bound together with the fact that $\|\Phi^{*}M^{-1}\mathcal{I}\|_{1}$ is bounded (!!do I need to expand on this!!) we have:
 \begin{equation}
     \label{bound_on_diff_cov_operators}
-    W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))\leq\|\Sigma_{1}-\Sigma_{2}\|_{1}\leq Ch\|K\mathcal{L}^{-1}\|_{1}
+    W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))\leq\|\Sigma_{1}-\Sigma_{2}\|_{1}\leq C_{1}h\|K\mathcal{L}^{-1}\|_{1}
 \end{equation}
 
 Combining (\ref{bound_on_diff_means}) and (\ref{bound_on_diff_cov_operators}) we now have:
 \begin{align*}
-    W^{2}(\nu_{1},\nu_{2})&=|m_1-m_2|_{H^{1}(\Omega)}^{2}+W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2)) \\
-    &\leq C^{2}(\|\bar{f}\|_{L^2(\Omega)}^{2}+\|K\mathcal{L}^{-1}\|_{1}^{2})h^2
+    W^{2}(\nu_{1},\nu_{2})&=\|m_1-m_2\|_{L^{2}(\Omega)}^{2}+W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2)) \\
+    &\leq \tilde{C}^{2}h^2\|\bar{f}\|^{2}_{L^{2}(\Omega)} + C_{1}h\|K\mathcal{L}^{-1}\|_{1}
 \end{align*}
 
 We thus have an upper bound on the Wasserstein distance between $\nu_{1},\nu_{2}$ in terms of the FEM mesh size $h$:
 \begin{equation}
     \label{bound_on_distance}
-    W(\nu_{1},\nu_{2})\leq Ch\sqrt{\|\bar{f}\|_{L^{2}(\Omega)}^{2}+\|K\mathcal{L}^{-1}\|_{1}^{2}}
+    W(\nu_{1},\nu_{2})\leq h^{1/2}\sqrt{C_{1}\|K\mathcal{L}^{-1}\|_{1}+\tilde{C}^{2}h^{2}\|\bar{f}\|^{2}_{L^{2}(\Omega)}}\leq\gamma h^{1/2}
 \end{equation}
+where $\gamma>0$ is a constant.
 
+\section{Notes 5}
+
+\noindent We now have two distributions for the solution $u$ to our boundary value problem, $\nu_{i}=\mathcal{N}(m_i,\Sigma_{i})$ for $i=1,2$. We now assume we also have sensor data which give us noisy observations of the value of $u$ at some points $y_{1},\dots,y_{s}$ in $\Omega$. We now want to update our belief in the distribution of $u$ using this sensor data. We can use $\nu_{i}$ as prior distributions. Our goal will be to investigate how different the two resulting posteriors are. \\
+
+Let $S:\mathcal{H}\rightarrow\mathbb{R}^{s}$ be the operator which maps a function $h\in\mathcal{H}$ to $(h(y_1),\dots,h(y_s))^{T}$ in $\mathbb{R}^{s}$. Assuming that the sensors make observations at each $y_j$ with a normally distributed error we have that the likelihood for our sensor readings, $\mathbf{v}$, is:
+\begin{equation}
+  \label{likelihood}
+  \mathbf{v}|u \sim \mathcal{N}(Su,\epsilon^{2}I)
+\end{equation}
+The goal is to now find the posterior $u|\mathbf{v}$ when our prior is $u\sim\nu_{i}\equiv\mathcal{N}(m_{i},\Sigma_{i}), \hspace{0.2cm} i=1,2$. In order to do so we will first find the joint distribution of $(u,\mathbf{v})$. To do this we note our assumption that $\mathbf{v}|u$ is distributed according to (\ref{likelihood}) is equivalent to the assertion that:
+\begin{equation*}
+  \mathbf{v}=Su+\boldsymbol{\delta}
+\end{equation*}
+where $\boldsymbol{\delta}\sim\mathcal{N}(\mathbf{0},\epsilon^{2}I)$ is independent of $u$. From this we can see that the joint distribution of $(u,\boldsymbol{\delta})$ is:
+\begin{equation*}
+  \begin{pmatrix}
+    u \\
+    \boldsymbol{\delta}
+  \end{pmatrix}\sim\mathcal{N}\left(\begin{pmatrix}
+                                    m \\
+                                    \mathbf{0}
+                                    \end{pmatrix},
+                                    \begin{pmatrix}
+                                      \Sigma & 0 \\
+                                      0 & \epsilon^{2}I
+                                    \end{pmatrix}
+                              \right)
+\end{equation*}
+We now note that $(u,\mathbf{v})$ can be expressed as:
+\begin{equation*}
+  \begin{pmatrix}
+    u \\
+    \mathbf{v}
+  \end{pmatrix}=\begin{pmatrix}
+                  I & 0 \\
+                  S & I
+                \end{pmatrix}\begin{pmatrix}
+                              u \\
+                              \boldsymbol{\delta}
+                             \end{pmatrix} +
+                             \begin{pmatrix}
+                                0 \\ \mathbf{0}
+                             \end{pmatrix}
+\end{equation*}
+Since this is just a linear transformation of $(u,\boldsymbol{\delta})$ we have that the joint distribution of $(u,\mathbf{v})$ is given by:
+\begin{equation}
+  \label{jointDist}
+  \begin{pmatrix}
+    u \\
+    \mathbf{v}
+  \end{pmatrix}\sim\mathcal{N}\left(
+                              \begin{pmatrix}
+                                m \\
+                                Sm
+                              \end{pmatrix},
+                              \begin{pmatrix}
+                                \Sigma & \Sigma S^{*} \\
+                                S\Sigma & \epsilon^{2}I+S\Sigma S^{*}
+                              \end{pmatrix}
+                              \right)
+\end{equation}
+From this it is simply a matter of conditioning to obtain the posterior distribution of $u|\mathbf{v}$. We thus obtain:
+\begin{equation}
+  \label{posterior}
+  u|\mathbf{v}\sim\mathcal{N}(m^{(i)}_{u|\mathbf{v}},\Sigma^{(i)}_{u|\mathbf{v}})
+\end{equation}
+where,
+\begin{align}
+  \label{posterior_mean}
+  m^{(i)}_{u|\mathbf{v}}&:=m_i+\Sigma_{i}S^{*}(\epsilon^{2}I+S\Sigma_{i}S^{*})^{-1}(\mathbf{v}-Sm_{i}) \\
+  \label{posterior_covariance}
+  \Sigma^{(i)}_{u|\mathbf{v}}&:=\Sigma_{i}-\Sigma_{i}S^{*}(\epsilon^{2}I+S\Sigma_{i}S^{*})^{-1}S\Sigma_{i}
+\end{align}
+
+Since the two posteriors are still Gaussian we can quantify how differnty they are by using the Wasserstein Distance again. We have,
+\begin{align*}
+    W^{2}\left(\mathcal{N}(m^{(1)}_{u|\mathbf{v}},\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(m^{(2)}_{u|\mathbf{v}},\Sigma^{(2)}_{u|\mathbf{v}})\right)&=\|m^{(1)}_{u|\mathbf{v}}-m^{(2)}_{u|\mathbf{v}}\|_{L^{2}(\Omega)}^{2}+W^{2}\left(\mathcal{N}(0,\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(0,\Sigma^{(2)}_{u|\mathbf{v}})\right) \\
+    &\leq \|m^{(1)}_{u|\mathbf{v}}-m^{(2)}_{u|\mathbf{v}}\|_{L^{2}(\Omega)}^{2} + \|\Sigma^{(1)}_{u|\mathbf{v}}-\Sigma^{(2)}_{u|\mathbf{v}}\|_{1}
+\end{align*}
+We now proceed to obtain an upper-bound on these terms. For convenience we will use the notation $B_{i}:=\epsilon^{2}I+S\Sigma_{i}S^{*}$ for $i=1,2$. It will be helpful to first work out an upper-bound on the operator norm of the difference $B_{1}^{-1}-B_{2}^{-1}$. To this end we first compute:
+\begin{align*}
+    \|B_{1}-B_{2}\|_{\infty}&=\|S(\Sigma_{1}-\Sigma_{2})S^{*}\|_{\infty} \\
+    &\leq\|S\|_{\infty}^{2}\|\Sigma_{1}-\Sigma_{2}\|_{\infty} \\
+    &\leq\|\Sigma_{1}-\Sigma_{2}\|_{1} \\
+    &\leq C_{1}h\|K\mathcal{L}^{-1}\|_{1}
+\end{align*}
+where we have used the fact that $\|S\|_{\infty}\leq1$. Since $B_{1}$ (and $B_{2}$) is invertible and for sufficiently small $h$ we have that $\|B_{1}-B_{2}\|_{\infty}<1/\|B_{1}^{-1}\|_{\infty}$
+
+
+\clearpage
 \section{Questions}
 
 \noindent \textbf{Question 1:} I still do not see how defining $I_j$ by $I_j:=\langle g, \psi_j \rangle$ in (\ref{info_operator_def}) implies that $I_{j}\mathcal{L}u=-\int_{\Omega}a\nabla u \cdot \nabla\psi_{j}\mathrm{d}x$. The reason I am confused is because of the fact that $I_j$ is a map from $H^{-1}(\Omega)$ to $\mathbb{R}$. I do see that if I assume that $I_{j}$ acts on functions $g$ via:
