--- a/Notes/references.bib
+++ b/Notes/references.bib
@@ -96,3 +96,10 @@
   year={1970},
   publisher={Springer}
 }
+
+@book{gohberg2012basic,
+  title={Basic classes of linear operators},
+  author={Gohberg, Israel and Goldberg, Seymour and Kaashoek, Marinus},
+  year={2012},
+  publisher={Birkh{\"a}user}
+}
