--- a/ESR/lit_review.tex
+++ b/ESR/lit_review.tex
@@ -15,8 +15,7 @@ u(x) &=g(x), \hspace{0.25cm} \forall x \in \partial D
 \end{align*}
 where $\{a(x)|x\in D\}$ and $\{f(x)|x\in D\}$ are second-order random fields. \textcolor{blue}{\citeauthor{lord2014introduction}} consider several methods for dealing with such a BVP. To start they first consider a variational formulation on $D$ and show that under suitable assumptions on the diffusion coefficients there is a unique solution to the variational formulation almost surely. A Galerkin FE approximation is then established for this formulation.
 The FEM is then combined with the Monte Carlo method to yield what the authors call the ``Monte Carlo Finite Element Method" (MCFEM) which can be used to estimate the expectation and variance of $u(x)$. This method essentially involves drawing \textit{iid} samples from the random fields in the BVP and then applying the FEM element to the resulting elliptic BVPs. Following this a variational formulation on $D\times\Omega$ is instead considered, where $\Omega$ is the underlying sample space for the probability space where the random fields live. The associated weak form is not a convenient starting point for Galerkin approximation as it involves taking expectations with respect to the abstract set $\Omega$ and the associated probability measure.
-This leads the authors to instead consider that the noise arising from the fields comes from a finite number of random-variables (i.e. the random fields are so called \textit{finite-dimensional noise}). Doing so yields an equivalent weak form on $D\times\Gamma$ where $\Gamma$ is the range of the finite-dimensional noise. Having done this a Stochastic Galerkin FEM is developed to approximate the solution to this new weak form. Both a semi-discrete and fully-discrete version are considered (discretization can now occur in two spaces). After analysing this method the authors finally consider a stochastic collocation FEM which combines collocation on the range of the finite-dimensional noise and FEM approximations on $D$. 
-
+This leads the authors to instead consider that the noise arising from the fields comes from a finite number of random-variables (i.e. the random fields are so called \textit{finite-dimensional noise}). Doing so yields an equivalent weak form on $D\times\Gamma$ where $\Gamma$ is the range of the finite-dimensional noise. Having done this a Stochastic Galerkin FEM is developed to approximate the solution to this new weak form. Both a semi-discrete and fully-discrete version are considered (discretization can now occur in two spaces). After analysing this method the authors finally consider a stochastic collocation FEM which combines collocation on the range of the finite-dimensional noise and FEM approximations on $D$. In Section \textcolor{blue}{\ref{elliptic_bv_prob}} we will consider a particular example of such a random elliptic BVP and introduce an alternative probabilistic numerical method to tackle this.
 
 
 \clearpage
