--- a/ESR/main.tex
+++ b/ESR/main.tex
@@ -75,6 +75,7 @@
 
 \section{General Framework}
 \label{general_framework}
+\input{general_framework.tex}
 
 \section{FEM for Elliptic Boundary Value Problem}
 \label{elliptic_bv_prob}
