--- a/ESR/references.bib
+++ b/ESR/references.bib
@@ -258,3 +258,63 @@
   journal={arXiv preprint arXiv:1807.09737},
   year={2018}
 }
+
+@INPROCEEDINGS{Rasmussen06gaussianprocesses,
+    author = {Carl Edward Rasmussen},
+    title = {Gaussian processes for machine learning},
+    year = {2006},
+    publisher = {MIT Press}
+}
+
+@incollection{lifshits2012lectures,
+  title={Lectures on Gaussian processes},
+  author={Lifshits, Mikhail},
+  booktitle={Lectures on Gaussian Processes},
+  pages={1--117},
+  year={2012},
+  publisher={Springer}
+}
+
+@book{sullivan2015introduction,
+  title={Introduction to uncertainty quantification},
+  author={Sullivan, Timothy John},
+  volume={63},
+  year={2015},
+  publisher={Springer}
+}
+
+@book{sarkka2013bayesian,
+  title={Bayesian filtering and smoothing},
+  author={S{\"a}rkk{\"a}, Simo},
+  volume={3},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+
+@article{raissi2017machine,
+  title={Machine learning of linear differential equations using Gaussian processes},
+  author={Raissi, Maziar and Perdikaris, Paris and Karniadakis, George Em},
+  journal={Journal of Computational Physics},
+  volume={348},
+  pages={683--693},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{bieri2010sparse,
+  title={Sparse tensor discretization of elliptic SPDEs},
+  author={Bieri, Marcel and Andreev, Roman and Schwab, Christoph},
+  journal={SIAM Journal on Scientific Computing},
+  volume={31},
+  number={6},
+  pages={4281--4304},
+  year={2010},
+  publisher={SIAM}
+}
+
+@article{cockayne2016probabilistic,
+  title={Probabilistic numerical methods for partial differential equations and Bayesian inverse problems},
+  author={Cockayne, Jon and Oates, Chris and Sullivan, Tim and Girolami, Mark},
+  journal={arXiv preprint arXiv:1605.07811},
+  year={2016}
+}
